[package]
name = "sleigh2rust"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/rbran/sleigh2rust"
license = "MIT"
description = "Transpile Ghidra Sleigh parser into rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sleigh-rs = "0.1.4"
quote = "1"
bitvec = "1"
proc-macro2 = "1"
indexmap = "1.9"
ethnum = "1"
